[gd_scene load_steps=2 format=3 uid="uid://cyip2qf1iaco1"]

[ext_resource type="Script" path="res://main.gd" id="1_xkj3o"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkj3o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
text = "GWJ77 - Metamorphosis"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tabs_visible = false

[node name="TitleScreen" type="MarginContainer" parent="VBoxContainer/HBoxContainer3/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64
metadata/_tab_index = 0

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen/Buttons"]
layout_mode = 2
text = "Play"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Little Prince meets Noita - falling sand game with small round planets. 

Planets can be transformed by the various materials. 
If planets rotate, the materials might be affected by the sun. (Ice -> Water -> Steam)
The seed material grows into plants, which absord water.
Steam can coalesce into clouds in the biosphere of each planet
"
wrap_mode = 1

[node name="StrangeButton" type="Button" parent="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen/Buttons"]
layout_mode = 2
text = "?"

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="DevNotes" type="TextEdit" parent="."]
custom_minimum_size = Vector2(384, 256)
layout_mode = 0
offset_left = -421.0
offset_top = 210.0
offset_right = -37.0
offset_bottom = 466.0
text = "Initial concept was a falling sand game, but falling particles proved to be too resource intensive, so I switched to bombs which spawn objects (lake, tree, mountain, whatever). Because falling sand games may require a custom pixel-based physics engine.

TODO:
Make the whal sprite flip_v if it's rotated so it's upside down and no keys are pressed
Make trees grow slowly
Make water spawn lake
Make warm lake spawn clouds
Make clouds spawn rain
Make rain grow trees
Mature trees should spawn seed pods
Some, very rare seed pods should contain baby whales (which will flock with the player)

Make planets rotate (maybe)

Add alien spaceships that harvest water? - or maybe they use a tractor beam to move wet planets away from sun, so they freeze
Add solar flares that burn trees?

Allow planets to warm / cool based on distance from sun
Give planets some kind of kepler movement?

If you have a space whale, it needs petunias (Douglas Adams), or maybe something from Star Trek IV.

For the theme of metamorphosis, a cockroach from Kafka would be good.

Jan 11, 2025: (Day 2):  Ok, so it seemed like fun if dirt got bigger when they bumped into each other, like Suika, but free form.
When balls of dirt get too big, they turn into planets.
But that begs the question, why is a planet different than a ball of dirt? Maybe they should be the same.
-- which means, seeds should spawn on any ball of dirt.

Jan 12, 2025: (Day 3): I'll need some music, so we recorded a few bars of ukulele picking and I'll try to arrange them into some sort of track. I don't know musical theory though, so this might be awful.
"
wrap_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/TabContainer/TitleScreen/Buttons/StrangeButton" to="." method="_on_strange_button_pressed"]
